<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/mobile_navigation"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="180dp" />

    <TextView
        android:id="@+id/deviceAddress"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/device_ip_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nav_host_fragment" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/address"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviceAddress" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/port"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:hint="@string/port"
        android:text="@string/default_port"
        app:layout_constraintStart_toStartOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <TextView
        android:id="@+id/filePath"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:text="@string/filePath"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/port"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/selectFile"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/file"
        app:layout_constraintStart_toStartOf="@+id/filePath"
        app:layout_constraintTop_toBottomOf="@+id/filePath" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginBottom="30dp"
        android:max="100"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/sendData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sendData"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/send_data"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toStartOf="@id/receiveData"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/receiveData"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/receive_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sendData"
        app:layout_constraintBottom_toTopOf="@+id/nav_view" />

</androidx.constraintlayout.widget.ConstraintLayout>